<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center">

    <TextView
        android:id="@+id/large_text_main"
        android:layout_marginTop="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/large_text_main"
        android:textSize="20dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/home_work_1_main_button"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/home_work_1_main_button"/>

    <Button
        android:id="@+id/home_work_2_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/home_work_2_main_button"/>

    <Button
    android:id="@+id/home_work_3_main_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:text="@string/home_work_3_main_button"/>

    <Button
        android:id="@+id/home_work_4_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/home_work_4_main_button"/>

    <Button
        android:id="@+id/home_work_5_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/home_work_5_main_button"/>

    <Button
        android:id="@+id/home_work_6_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/home_work_6_main_button"/>

    <Button
        android:id="@+id/home_work_7_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/home_work_7_main_button"/>

</LinearLayout>
